src/objects/Case_Item__c.object
<CustomObject>
    <description>Represents a finer grained aspect of a Case that has an independent lifecycle defined outside of Salesforce. Records typically represent a subset of data from an external system, such as for incident management, where data can be integrated for reporting and workflow purpsoses such as a delegation of an aspect of a Salesforce Case to an IATA incident management system for resolution.</description>
    <label>Case Item</label>
    <nameField>
        <displayFormat>CI-{0000000000}</displayFormat>
        <label>Case Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Bypass_Salesforce_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this Case Item customer can communicate directly with IATA Support teams, bypassing Salesforce support processes. This supports use cases where certain external users require direct interaction with IATA Support teams.</description>
        <label>Bypass Salesforce Support?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>The Case record that this Case Item relates to and represents a more specific part of the Case that is not managed as part of Global Customer Service scope.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Items</relationshipLabel>
        <relationshipName>Case_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>An reference to an external system for integration purposes.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATA_Business_Process__c</fullName>
        <description>Defines the IATA Business Process that this Case Item details.</description>
        <label>IATA Business Process</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IATA Clearing House Admin Tools</fullName>
                </value>
                <value>
                    <fullName>ICER</fullName>
                </value>
                <value>
                    <fullName>ICH - FIN Abatements</fullName>
                </value>
                <value>
                    <fullName>ICH - FIN Bank Movements</fullName>
                </value>
                <value>
                    <fullName>ICH - FIN Bank Statement Files</fullName>
                </value>
                <value>
                    <fullName>ICH - FIN Deposit Management</fullName>
                </value>
                <value>
                    <fullName>ICH - FIN Emails</fullName>
                </value>
                <value>
                    <fullName>ICH - FIN Fees</fullName>
                </value>
                <value>
                    <fullName>ICH - FIN Non-Revenue Inv (SIS)</fullName>
                </value>
                <value>
                    <fullName>ICH - FIN Prot./ Adj. Request</fullName>
                </value>
                <value>
                    <fullName>ICH - FIN Reporting</fullName>
                </value>
                <value>
                    <fullName>ICH - FIN Revenue Inv (SAP)</fullName>
                </value>
                <value>
                    <fullName>ICH - FIN Settlement</fullName>
                </value>
                <value>
                    <fullName>ICH - FIN Special Clearance</fullName>
                </value>
                <value>
                    <fullName>ICH - FX Deals</fullName>
                </value>
                <value>
                    <fullName>ICH - Interface Bank</fullName>
                </value>
                <value>
                    <fullName>ICH - Interface SAP</fullName>
                </value>
                <value>
                    <fullName>ICH - Interface SIS</fullName>
                </value>
                <value>
                    <fullName>ICH - Member Configuration</fullName>
                </value>
                <value>
                    <fullName>ICH MIS</fullName>
                </value>
                <value>
                    <fullName>ICH - OPS / Members Reporting</fullName>
                </value>
                <value>
                    <fullName>ICH - OPS Archiving</fullName>
                </value>
                <value>
                    <fullName>ICH - OPS Emails</fullName>
                </value>
                <value>
                    <fullName>ICH - OPS F1/F3 Generation</fullName>
                </value>
                <value>
                    <fullName>ICH - OPS Invoice Crosscheck/Discrepancies</fullName>
                </value>
                <value>
                    <fullName>ICH - OPS Period Initialization</fullName>
                </value>
                <value>
                    <fullName>ICH - OPS Rates Files</fullName>
                </value>
                <value>
                    <fullName>ICH - Other</fullName>
                </value>
                <value>
                    <fullName>ICH servers</fullName>
                </value>
                <value>
                    <fullName>ICH - User Administration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IATA_Business_Service__c</fullName>
        <description>Defines the IATA Business Service that this Case Item details.</description>
        <label>IATA Business Service</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>IATA Clearing House - ICH</fullName>
                </value>
                <value>
                    <fullName>iiNET Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <description>A categorisation of the severity of this Case Item.
High = All users impacted (e.g. Email server down) Medium = A group of users impacted (e.g. Printer no working) Low = 1 user impacted (e.g. Lost password)</description>
        <inlineHelpText>High = All users impacted (e.g. Email server down) Medium = A group of users impacted (e.g. Printer no working) Low = 1 user impacted (e.g. Lost password)</inlineHelpText>
        <label>Impact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - High</fullName>
                </value>
                <value>
                    <fullName>2 - Medium</fullName>
                </value>
                <value>
                    <fullName>3 - Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Super_User_Contacted__c</fullName>
        <label>Super User Contacted?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I am a super user</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;Open&quot;</defaultValue>
        <description>The lifecycle stage of this Case Item.</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Work in progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Pending Business Feedback</fullName>
                </value>
                <value>
                    <fullName>Pending External Supplier Feedback</fullName>
                </value>
                <value>
                    <fullName>Pending ITS Feedback</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <description>A brief description of the Case Item.</description>
        <label>Summary</label>
        <type>TextArea</type>
    </fields>
    <recordTypes>
        <fullName>MASTER</fullName>
        <active>true</active>
        <description>Master record type</description>
        <label>MASTER</label>
    </recordTypes>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>